--- a/src/components/service.css
+++ b/src/components/service.css
@@ -10,7 +10,7 @@
     margin-left: 70%;
 }
 
-.card{
+.service-card{
     width: 300px;
     height: 150px;
     background-color: white;
@@ -18,4 +18,17 @@
     position:absolute;
     margin-top: -450px;
     margin-left: 70%;
+}
+
+.input{
+    margin-bottom: 20px;
+    padding: 8px;
+    width: 300px;
+    position:absolute;
+    margin-top: -500px;
+    margin-left: 70%;
+  
+    @media (max-width: 600px) {
+      width: 100%;
+    }
 }
