--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -13,7 +13,6 @@
   top: 0px;
   left: 50%;
   transform: translate(-50%);
-  /* Clearfix */
   z-index: 1;
 }
 
@@ -38,13 +37,14 @@
 }
 
 .nav-menu {
-  display: grid;
-  grid-template-columns: repeat(6, auto);
-  grid-gap: 10px;
   list-style: none;
   align-items: center;
   text-align: center;
   justify-content: end;
+}
+
+.nav-menu li {
+  position: relative;
 }
 
 .nav-links {
@@ -60,13 +60,41 @@
 
 .nav-links:hover {
   background: rgb(80, 80, 230);
-  border-radius: 4px 4px 4px;
+  border-radius: 4px;
   transition: all 0.2s ease-in-out;
 }
 
-.fa-bars,
-.fa-times {
-  color: #222;
+.submenu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #fff; /* Change background color */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Add box shadow */
+  border-radius: 0 0 4px 4px; /* Add border radius */
+}
+
+.nav-menu li:hover .submenu {
+  display: block;
+}
+
+.submenu li {
+  width: 100%;
+}
+
+.submenu li a {
+  display: block;
+  padding: 10px 20px; /* Adjust padding */
+  color: #333; /* Change text color */
+  text-decoration: none;
+  top: 30px;
+  
+  height: 80px;
+  width: auto;
+}
+
+.submenu li a:hover {
+  background-color: #12e12e; /* Change hover background color */
 }
 
 .menu-icon {
@@ -86,8 +114,7 @@
 
 @media screen and (max-width: 850px) {
   .NavbarItems {
-    z-index: 99; /* Adjust the value as needed */
-    /* Clearfix in mobile view */
+    z-index: 99;
   }
   .nav-menu {
     display: flex;
@@ -105,7 +132,7 @@
     align-items: stretch;
     padding: 80px 0 30px 0;
     margin: 0;
-    z-index: 0; /* Adjust the value as needed */
+    z-index: 0;
     transition: all 0.3s ease-in-out;
   }
   .nav-menu.active {
