--- a/src/components/SignUpStyles.css
+++ b/src/components/SignUpStyles.css
@@ -1,5 +1,5 @@
 .background- {
-    background-image: url('./map.jpg'); /* Update the path if necessary */
+    background-image: url('https://i.ibb.co/z8b1nFg/comic-style-background-23-2148836600.jpg'); /* Update the path if necessary */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
