--- a/src/components/bite.css
+++ b/src/components/bite.css
@@ -1,65 +1,167 @@
 .section {
-    margin-top: 5rem;
+    margin-top: 12rem;
     
 }
 
-.ai-image-generator {
+.aiImage{
     display: flex;
     flex-direction: column;
-    /* Center content vertically */
+    margin: auto;
     align-items: center;
-    margin-top: 80px;
-    margin-bottom: 20px;
+    margin-top: 0px;
+    margin-bottom: 0px;
     gap: 30px;
-   
 }
-
-.header {
+.header{
     font-size: 70px;
     font-weight: 500;
-    padding-bottom: 30px;
+    padding-bottom: 0px;
 }
-
-.header span {
-    color: #DE1B89;
+.header span{
+    color: #de1889;
     font-weight: 600;
 }
-
-.img-loading {
-    display: flex;
-    flex-direction: column;
-    
-}
-
-.img-loading img {
-    max-width: 90%; /* Limit the maximum width of the image */
+.genImage img {
+    border-radius: 0;
     height: 500px;
-    width: 700px; 
-   
-}
-
-.img-container {
-    display: flex;
-    justify-content: center; /* Center content horizontally */ }
-.search-input {
-        width: 900px; /* Adjust the width as needed */
-        height: 50px; /* Adjust the height as needed */
-        background: transparent;
-        font-size: 16px; /* Adjust the font size as needed */
-        /* Add any additional styles you need */
-        border: none;
-        outline: none;
-        font-size: 18px;
-        color: white;
-        padding-left: 35px;
-        padding-right: 35px;
-}
-.search-box{
+  }
+.imgArea{
+    height: 500px;
+  }
+.search{
     display: flex;
     width: 1000px;
-   
+    height: 70px;
     justify-content: space-around;
     align-items: center;
     border-radius: 50px;
-    background: #f9aaaa90;
+    background: #1f3540;
+    margin-bottom: 5px;
+}
+.searchInput{
+    width: 600px;
+    height: 50px;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    color: white;
+    padding-left: 35px;
+    margin-right: 35px;
+}
+.searchInput::placeholder{
+    color: #999;
+}
+.copyright{
+    margin-bottom: 50px;
+    text-align: center;
+}
+.copyright a{
+    color:  #B8B8B8;
+    text-decoration: none;
+    
+}
+.copyright a:hover{
+    text-decoration: underline;   
+}
+.genBtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    height: 70px;
+    font-size: 20px;
+    border-radius: 50px;
+    opacity: 50%;
+    background: #de1889;
+    cursor: pointer;
+    margin-right: 0px;
+}
+.genBtn:hover{
+    background: #e42c94;
+}
+.downBtn:hover{
+    background: #e42c94;
+}
+.downBtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 70px;
+    font-size: 20px;
+    border-radius: 50px;
+    background: #de1889;
+    opacity: 50%;
+    cursor: pointer;
+    margin-left: 0px;
+}
+.downBtn img{
+    align-items: center;
+    justify-content: center;
+    width: 80px;
+}
+
+@media only screen and (max-width: 1280px){
+.header{
+    font-size: 40px;
+    font-weight: 500;
+    padding-bottom: 0px;
+    margin-top: 5px;
+}
+.imgArea{
+    height: 250px;
+  }
+.genImage img {
+    border-radius: 20%;
+    height: 250px;
+    width: 30px;
+  }
+.search{
+    display: block;
+    width: 320px;
+    height: 150px;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 50px;
+    background: #1f354000;
+    margin-bottom: 5px;
+}
+.genBtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 320px;
+    height: 50px;
+    font-size: 19px;
+    border-radius: 50px;
+    opacity: 50%;
+    background: #de1889;
+    cursor: pointer;
+    margin-bottom: 100px;
+}
+.downBtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 320px;
+    height: 50px;
+    font-size: 19px;
+    border-radius: 50px;
+    opacity: 50%;
+    background: #de1889;
+    cursor: pointer;
+    margin-left: 0px;
+}
+.searchInput{
+    width: 250px;
+    height: 50px;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    color: white;
+    padding-left: 35px;
+    margin-right: 35px;
+}
 }
